# jcdump

./: Cargo.toml
.github/workflows/: pages.yml
demo/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
demo/src/: App.tsx  index.css  main.tsx
demo/src/lib/: classfile.ts  jar.ts  libjcdump.wasm  zip.ts
src/: lib.rs  raw.rs
tests/: integration_test.rs
tests/data/: Main.java  module-info.java
