[package]
name = "jcdump"
version = "0.1.0"
edition = "2024"

[lib]
name = "libjcdump"
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3.23.0"
